--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends 'rango/base.html' %}
+{% block title_block %}
+    Rango
+{% endblock}
 
-    <body>
+{% block body_block %}
         <h1>Add a Page</h1>
         <div>
             {% if category %}
@@ -24,5 +23,4 @@
                 the specified category does not exist!
             {% endif %}
         </div>
-    </body>
-</html>
+{% endblock %}
